objects/WebService_Log__c.object
<CustomObject>
    <description>used to store response codes including success and error</description>
    <fields>
        <fullName>CalloutStartTime__c</fullName>
        <label>Callout Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CalloutTime__c</fullName>
        <label>CalloutTime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Callout_End_Time__c</fullName>
        <label>Callout End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <label>Request Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Body__c</fullName>
        <label>Response Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Code__c</fullName>
        <label>Response Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Description__c</fullName>
        <description>used to store response descriptions for end user reference</description>
        <label>Response Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>WebService Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Response_Code__c</columns>
        <columns>Status__c</columns>
        <columns>CalloutTime__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>WebService Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WebService Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>